// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id="Search_Standard"
  rows={null}
>
  <form
    className="Search__SearchContainer-sey9om-0 hvjWEc"
  >
    <input
      className="Search__NewTextInput-sey9om-1 gIKvUj"
      id="Search_Standard-search-bar"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Search Location"
      type="search"
    />
    <button
      className="Button__StyledButton-sc-1v7sls2-0 fcVknO"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="search"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
  </form>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id="Search_Results"
  rows={null}
>
  <form
    className="Search__SearchContainer-sey9om-0 hvjWEc"
  >
    <input
      className="Search__NewTextInput-sey9om-1 gIKvUj"
      id="Search_Results-search-bar"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Search Location"
      type="search"
    />
    <button
      className="Button__StyledButton-sc-1v7sls2-0 fcVknO"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="search"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
  </form>
  <div
    className="Container__Wrapper-sc-1i4fzzd-0 cNAMYg"
    height={null}
    width={null}
  >
    <div
      className="Container__BoxContainer-sc-1i4fzzd-1 ldPzer"
      height=""
      id="Search_Results-results-container"
    >
      <ul
        className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
        id={null}
      >
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                White House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Orange House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                1224 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Red House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Green House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Black House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Blue House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Address
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                APN
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Owner
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Address
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
      </ul>
      <div
        className="Bar__BarLayout-icfo76-2 jEWtiX"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <a
            className="Typography__LinkText-sc-19auepv-1 fZvALr"
            fontSize="0.876em"
            fontWeight={600}
            href={null}
            letterSpacing="0px"
            onClick={null}
            target={null}
          >
            View More
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id="Search_Error"
  rows={null}
>
  <form
    className="Search__SearchContainer-sey9om-0 hvjWEc"
  >
    <input
      className="Search__NewTextInput-sey9om-1 gIKvUj"
      id="Search_Error-search-bar"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Search Location"
      type="search"
    />
    <button
      className="Button__StyledButton-sc-1v7sls2-0 fcVknO"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="search"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
  </form>
  <div
    className="Container__Wrapper-sc-1i4fzzd-0 cNAMYg"
    height={null}
    width={null}
  >
    <div
      className="Container__BoxContainer-sc-1i4fzzd-1 ldPzer"
      height=""
      id="Search_Error-results-container"
    >
      <div
        className="Bar__BarLayout-icfo76-2 jEWtiX"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            We recommend the following based on your key word search
          </p>
        </div>
      </div>
      <ul
        className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
        id={null}
      >
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                White House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Orange House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                1224 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Red House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Green House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Black House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Blue House
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Address
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                APN
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Owner
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
        <li
          className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
          disabled={false}
          href={null}
          id={null}
          tabIndex="0"
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <p
                className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
                fontSize="1em"
                fontWeight={400}
                id={null}
                letterSpacing="0px"
              >
                Address
              </p>
              <p
                className="Typography__Paragraph-sc-19auepv-3 BMTkE"
                fontSize="0.75em"
                fontWeight={400}
                id={null}
                letterSpacing="0.4px"
              >
                123 Malibu Drive, CA 92660
              </p>
            </div>
          </div>
        </li>
      </ul>
      <div
        className="Bar__BarLayout-icfo76-2 jEWtiX"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <a
            className="Typography__LinkText-sc-19auepv-1 fZvALr"
            fontSize="0.876em"
            fontWeight={600}
            href={null}
            letterSpacing="0px"
            onClick={null}
            target={null}
          >
            View More
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id="Search_Offline"
    rows={null}
  >
    <form
      className="Search__SearchContainer-sey9om-0 hvjWEc"
    >
      <input
        className="Search__NewTextInput-sey9om-1 gIKvUj"
        id="Search_Offline-search-bar"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search Location"
        type="search"
      />
      <button
        className="Button__StyledButton-sc-1v7sls2-0 fcVknO"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={[Function]}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
          id={null}
          rows={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="search"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </button>
    </form>
    <div
      className="Container__Wrapper-sc-1i4fzzd-0 cNAMYg"
      height={null}
      width={null}
    >
      <div
        className="Container__BoxContainer-sc-1i4fzzd-1 ldPzer"
        height=""
        id="Search_Offline-results-container"
      >
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-signal-slash fa-w-20 Icon__StyledIcon-sc-1oa9m1v-1 brUBnv"
              color={null}
              data-icon="signal-slash"
              data-prefix="far"
              focusable="false"
              fontSize="2.5em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M633.99 471.02L36 3.51C29.1-2.01 19.03-.9 13.51 6l-10 12.49C-2.02 25.39-.9 35.46 6 40.98l598 467.51c6.9 5.52 16.96 4.4 22.49-2.49l10-12.49c5.52-6.9 4.41-16.97-2.5-22.49zM80 384H48c-8.84 0-16 7.16-16 16v96c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-96c0-8.84-7.16-16-16-16zm400-272c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v127.66l64 50.04V112zm128-96c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v323.73l64 50.04V16zM416 496c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-23.52l-64-50.04V496zm-128 0c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V372.41l-64-50.04V496zm-80-208h-32c-8.84 0-16 7.16-16 16v192c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V304c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              You are offline
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id="Search_BadConnection"
    rows={null}
  >
    <form
      className="Search__SearchContainer-sey9om-0 hvjWEc"
    >
      <input
        className="Search__NewTextInput-sey9om-1 gIKvUj"
        id="Search_BadConnection-search-bar"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search Location"
        type="search"
      />
      <button
        className="Button__StyledButton-sc-1v7sls2-0 fcVknO"
        disabled={false}
        htmlFor={null}
        id={null}
        name={null}
        onClick={[Function]}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
          id={null}
          rows={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
            color={null}
            data-icon="search"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </section>
      </button>
    </form>
    <div
      className="Container__Wrapper-sc-1i4fzzd-0 cNAMYg"
      height={null}
      width={null}
    >
      <div
        className="Container__BoxContainer-sc-1i4fzzd-1 ldPzer"
        height=""
        id="Search_BadConnection-results-container"
      >
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-signal-slash fa-w-20 Icon__StyledIcon-sc-1oa9m1v-1 brUBnv"
              color={null}
              data-icon="signal-slash"
              data-prefix="far"
              focusable="false"
              fontSize="2.5em"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 640 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M633.99 471.02L36 3.51C29.1-2.01 19.03-.9 13.51 6l-10 12.49C-2.02 25.39-.9 35.46 6 40.98l598 467.51c6.9 5.52 16.96 4.4 22.49-2.49l10-12.49c5.52-6.9 4.41-16.97-2.5-22.49zM80 384H48c-8.84 0-16 7.16-16 16v96c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-96c0-8.84-7.16-16-16-16zm400-272c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v127.66l64 50.04V112zm128-96c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v323.73l64 50.04V16zM416 496c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16v-23.52l-64-50.04V496zm-128 0c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V372.41l-64-50.04V496zm-80-208h-32c-8.84 0-16 7.16-16 16v192c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V304c0-8.84-7.16-16-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="Bar__BarLayout-icfo76-2 jEWtiX"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 dLaZFL"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 iHWhme"
              fontSize="0.879em"
              fontWeight={400}
              id={null}
              letterSpacing="0.2px"
            >
              Check your internet connection
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;
